yaon/YaonTextParser.java
// Generated from YaonText.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class YaonTextParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		L_BRACKET=1, R_BRACKET=2, L_PAREN=3, R_PAREN=4, L_CURLY=5, R_CURLY=6, 
		COMMA=7, COLON=8, SEMICOLON=9, DOT=10, NON_DOT_OPERATOR=11, WHITESPACE=12, 
		INLINE_COMMENT=13, BLOCK_COMMENT=14, NULL=15, TYPE=16, BOOL=17, TIMESTAMP=18, 
		BIN_INTEGER=19, DEC_INTEGER=20, HEX_INTEGER=21, SPECIAL_FLOAT=22, FLOAT=23, 
		DECIMAL=24, QUOTED_SYMBOL=25, IDENTIFIER_SYMBOL=26, SHORT_QUOTED_STRING=27, 
		LONG_QUOTED_STRING=28, SHORT_QUOTED_CLOB=29, LONG_QUOTED_CLOB=30, BLOB=31;
	public static final int
		RULE_top_level = 0, RULE_top_level_value = 1, RULE_value = 2, RULE_entity = 3, 
		RULE_delimiting_entity = 4, RULE_keyword_delimiting_entity = 5, RULE_keyword_entity = 6, 
		RULE_numeric_entity = 7, RULE_annotation = 8, RULE_quoted_annotation = 9, 
		RULE_list = 10, RULE_sexp = 11, RULE_sexp_value = 12, RULE_sexp_delimiting_entity = 13, 
		RULE_sexp_keyword_delimiting_entity = 14, RULE_sexp_null_delimiting_entity = 15, 
		RULE_sexp_keyword_entity = 16, RULE_operator = 17, RULE_struct = 18, RULE_field = 19, 
		RULE_any_null = 20, RULE_typed_null = 21, RULE_field_name = 22, RULE_quoted_text = 23, 
		RULE_symbol = 24, RULE_ws = 25;
	public static final String[] ruleNames = {
		"top_level", "top_level_value", "value", "entity", "delimiting_entity", 
		"keyword_delimiting_entity", "keyword_entity", "numeric_entity", "annotation", 
		"quoted_annotation", "list", "sexp", "sexp_value", "sexp_delimiting_entity", 
		"sexp_keyword_delimiting_entity", "sexp_null_delimiting_entity", "sexp_keyword_entity", 
		"operator", "struct", "field", "any_null", "typed_null", "field_name", 
		"quoted_text", "symbol", "ws"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'['", "']'", "'('", "')'", "'{'", "'}'", "','", "':'", "';'", "'.'", 
		null, null, null, null, "'null'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "L_BRACKET", "R_BRACKET", "L_PAREN", "R_PAREN", "L_CURLY", "R_CURLY", 
		"COMMA", "COLON", "SEMICOLON", "DOT", "NON_DOT_OPERATOR", "WHITESPACE", 
		"INLINE_COMMENT", "BLOCK_COMMENT", "NULL", "TYPE", "BOOL", "TIMESTAMP", 
		"BIN_INTEGER", "DEC_INTEGER", "HEX_INTEGER", "SPECIAL_FLOAT", "FLOAT", 
		"DECIMAL", "QUOTED_SYMBOL", "IDENTIFIER_SYMBOL", "SHORT_QUOTED_STRING", 
		"LONG_QUOTED_STRING", "SHORT_QUOTED_CLOB", "LONG_QUOTED_CLOB", "BLOB"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "YaonText.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public YaonTextParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class Top_levelContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(YaonTextParser.EOF, 0); }
		public List<Top_level_valueContext> top_level_value() {
			return getRuleContexts(Top_level_valueContext.class);
		}
		public Top_level_valueContext top_level_value(int i) {
			return getRuleContext(Top_level_valueContext.class,i);
		}
		public List<WsContext> ws() {
			return getRuleContexts(WsContext.class);
		}
		public WsContext ws(int i) {
			return getRuleContext(WsContext.class,i);
		}
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public Top_levelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_top_level; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YaonTextListener ) ((YaonTextListener)listener).enterTop_level(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YaonTextListener ) ((YaonTextListener)listener).exitTop_level(this);
		}
	}

	public final Top_levelContext top_level() throws RecognitionException {
		Top_levelContext _localctx = new Top_levelContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_top_level);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(55);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
					while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
						if ( _alt==1 ) {
							{
							{
							setState(52);
							ws();
							}
							} 
						}
						setState(57);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
					}
					setState(58);
					top_level_value();
					}
					} 
				}
				setState(63);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(67);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(64);
					ws();
					}
					} 
				}
				setState(69);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << L_BRACKET) | (1L << L_PAREN) | (1L << L_CURLY) | (1L << SEMICOLON) | (1L << WHITESPACE) | (1L << INLINE_COMMENT) | (1L << BLOCK_COMMENT) | (1L << NULL) | (1L << TYPE) | (1L << BOOL) | (1L << TIMESTAMP) | (1L << BIN_INTEGER) | (1L << DEC_INTEGER) | (1L << HEX_INTEGER) | (1L << SPECIAL_FLOAT) | (1L << FLOAT) | (1L << DECIMAL) | (1L << QUOTED_SYMBOL) | (1L << IDENTIFIER_SYMBOL) | (1L << SHORT_QUOTED_STRING) | (1L << LONG_QUOTED_STRING) | (1L << SHORT_QUOTED_CLOB) | (1L << LONG_QUOTED_CLOB) | (1L << BLOB))) != 0)) {
				{
				setState(70);
				value();
				}
			}

			setState(73);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Top_level_valueContext extends ParserRuleContext {
		public Top_level_valueContext top_level_value() {
			return getRuleContext(Top_level_valueContext.class,0);
		}
		public List<AnnotationContext> annotation() {
			return getRuleContexts(AnnotationContext.class);
		}
		public AnnotationContext annotation(int i) {
			return getRuleContext(AnnotationContext.class,i);
		}
		public Delimiting_entityContext delimiting_entity() {
			return getRuleContext(Delimiting_entityContext.class,0);
		}
		public Numeric_entityContext numeric_entity() {
			return getRuleContext(Numeric_entityContext.class,0);
		}
		public WsContext ws() {
			return getRuleContext(WsContext.class,0);
		}
		public Quoted_annotationContext quoted_annotation() {
			return getRuleContext(Quoted_annotationContext.class,0);
		}
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public Keyword_entityContext keyword_entity() {
			return getRuleContext(Keyword_entityContext.class,0);
		}
		public Keyword_delimiting_entityContext keyword_delimiting_entity() {
			return getRuleContext(Keyword_delimiting_entityContext.class,0);
		}
		public Top_level_valueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_top_level_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YaonTextListener ) ((YaonTextListener)listener).enterTop_level_value(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YaonTextListener ) ((YaonTextListener)listener).exitTop_level_value(this);
		}
	}

	public final Top_level_valueContext top_level_value() throws RecognitionException {
		Top_level_valueContext _localctx = new Top_level_valueContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_top_level_value);
		try {
			int _alt;
			setState(103);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(76); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(75);
						annotation();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(78); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				setState(80);
				top_level_value();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(82);
				delimiting_entity();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(83);
				numeric_entity();
				setState(84);
				ws();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(86);
				numeric_entity();
				setState(87);
				quoted_annotation();
				setState(88);
				value();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(90);
				numeric_entity();
				setState(91);
				delimiting_entity();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(93);
				keyword_entity();
				setState(94);
				ws();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(96);
				keyword_entity();
				setState(97);
				quoted_annotation();
				setState(98);
				value();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(100);
				keyword_entity();
				setState(101);
				keyword_delimiting_entity();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueContext extends ParserRuleContext {
		public EntityContext entity() {
			return getRuleContext(EntityContext.class,0);
		}
		public List<AnnotationContext> annotation() {
			return getRuleContexts(AnnotationContext.class);
		}
		public AnnotationContext annotation(int i) {
			return getRuleContext(AnnotationContext.class,i);
		}
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YaonTextListener ) ((YaonTextListener)listener).enterValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YaonTextListener ) ((YaonTextListener)listener).exitValue(this);
		}
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_value);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(105);
					annotation();
					}
					} 
				}
				setState(110);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			setState(111);
			entity();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EntityContext extends ParserRuleContext {
		public Numeric_entityContext numeric_entity() {
			return getRuleContext(Numeric_entityContext.class,0);
		}
		public Delimiting_entityContext delimiting_entity() {
			return getRuleContext(Delimiting_entityContext.class,0);
		}
		public Keyword_entityContext keyword_entity() {
			return getRuleContext(Keyword_entityContext.class,0);
		}
		public EntityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entity; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YaonTextListener ) ((YaonTextListener)listener).enterEntity(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YaonTextListener ) ((YaonTextListener)listener).exitEntity(this);
		}
	}

	public final EntityContext entity() throws RecognitionException {
		EntityContext _localctx = new EntityContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_entity);
		try {
			setState(116);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(113);
				numeric_entity();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(114);
				delimiting_entity();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(115);
				keyword_entity();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Delimiting_entityContext extends ParserRuleContext {
		public Quoted_textContext quoted_text() {
			return getRuleContext(Quoted_textContext.class,0);
		}
		public TerminalNode SHORT_QUOTED_CLOB() { return getToken(YaonTextParser.SHORT_QUOTED_CLOB, 0); }
		public TerminalNode LONG_QUOTED_CLOB() { return getToken(YaonTextParser.LONG_QUOTED_CLOB, 0); }
		public TerminalNode BLOB() { return getToken(YaonTextParser.BLOB, 0); }
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public SexpContext sexp() {
			return getRuleContext(SexpContext.class,0);
		}
		public StructContext struct() {
			return getRuleContext(StructContext.class,0);
		}
		public Delimiting_entityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_delimiting_entity; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YaonTextListener ) ((YaonTextListener)listener).enterDelimiting_entity(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YaonTextListener ) ((YaonTextListener)listener).exitDelimiting_entity(this);
		}
	}
